--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'swagger-ui-react/swagger-ui.css';
+
 @layer base {
   :root {
     --background: 222.2 84% 4.9%;
